--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <td>
                             <select id="program" name="program" required>
                                 <option value="Ekonomi">Ekonomi</option>
-                                <option value="Manejemnt">Manejemnt</option>
-                                <option value="Akutansi">Akutansil</option>
+                                <option value="Manejemnt">Manejement</option>
+                                <option value="Akutansi">Akutansi</option>
                                 <option value="Piskologi">Piskologi</option>
                                 <option value="Keolahragaan">Keolahragaan</option>
                                 <option value="Peternakan">Peternakan</option>
